# WebPhonon-Android-Audio-Edition

./: CMakeLists.txt  README.md  WebPhonon-Android-Audio-edition.pro  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  visualizer.cpp  visualizer.h
android/: AndroidManifest.xml  build.gradle
